welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:2: error: ':' expected but ')' found.
def hunt(c) {
          ^SlugSnail:33: error: identifier expected but '}' found.
}
^